--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -346,8 +346,6 @@ deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
 deny 2a00:1728:3f::c0cc:80;
 deny 2a00:1728:f:f:f:f:c03c:9898;
-deny 2a00:1b88:4::2;
-deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:178::982b;
 deny 2a00:1dc0:caff:73::a568;
@@ -497,7 +495,6 @@ deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
 deny 2a06:d380:0:103::62;
-deny 2a06:d380:0:103::63;
 deny 2a06:e80:3000:1:bad:babe:ca11:911;
 deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
@@ -722,6 +719,7 @@ deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:1e01::2;
+deny 2a12:3e80:2:29::;
 deny 2a12:5940:13e2::2;
 deny 2a12:5940:144f::2;
 deny 2a12:5940:52c2::2;
