--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,6 +7,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -147,7 +148,6 @@ allow 152.89.233.169;
 allow 154.16.116.61;
 allow 155.4.102.252;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -253,6 +253,7 @@ allow 185.129.61.7;
 allow 185.129.61.8;
 allow 185.129.61.9;
 allow 185.129.62.62;
+allow 185.129.62.63;
 allow 185.130.44.108;
 allow 185.130.44.43;
 allow 185.130.47.58;
@@ -995,6 +996,7 @@ allow 23.154.177.19;
 allow 23.154.177.2;
 allow 23.154.177.20;
 allow 23.154.177.21;
+allow 23.154.177.22;
 allow 23.154.177.23;
 allow 23.154.177.24;
 allow 23.154.177.25;
@@ -1394,6 +1396,7 @@ allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
+allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
@@ -1627,7 +1630,6 @@ allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c814::2;
 allow 2a12:5940:c826::2;
-allow 2a12:5940:d0e2::2;
 allow 2a12:5940:f0a8::2;
 allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
@@ -1636,7 +1638,6 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
-allow 34.193.30.172;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 3.67.194.114;
@@ -1690,7 +1691,6 @@ allow 45.151.167.11;
 allow 45.151.167.12;
 allow 45.151.167.13;
 allow 45.15.157.177;
-allow 45.15.158.165;
 allow 45.15.158.39;
 allow 45.156.26.111;
 allow 45.56.81.190;
@@ -1756,7 +1756,9 @@ allow 51.91.18.151;
 allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.3.77.163;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1896,7 +1898,6 @@ allow 91.139.160.150;
 allow 91.203.144.194;
 allow 91.203.145.116;
 allow 91.206.26.26;
-allow 91.208.197.144;
 allow 91.208.75.153;
 allow 91.208.75.156;
 allow 91.208.75.178;
@@ -1913,7 +1914,6 @@ allow 92.119.126.161;
 allow 92.205.129.119;
 allow 92.243.24.163;
 allow 92.246.84.133;
-allow 92.249.48.135;
 allow 93.123.12.112;
 allow 93.90.74.31;
 allow 93.95.225.141;
