Update lists at 20240411-0600

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,7 +7,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -52,7 +51,6 @@ allow 107.189.11.80;
 allow 107.189.12.3;
 allow 107.189.12.7;
 allow 107.189.13.180;
-allow 107.189.13.251;
 allow 107.189.13.253;
 allow 107.189.13.254;
 allow 107.189.13.91;
@@ -209,7 +207,7 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.236.247.122;
-allow 178.31.169.149;
+allow 178.31.169.193;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -271,6 +269,7 @@ allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
 allow 185.174.136.114;
+allow 185.177.151.34;
 allow 185.181.60.135;
 allow 185.181.61.115;
 allow 185.181.61.142;
@@ -556,7 +555,6 @@ allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
 allow 191.101.31.10;
-allow 191.252.220.31;
 allow 191.96.165.34;
 allow 192.153.57.177;
 allow 192.153.57.19;
@@ -945,8 +943,6 @@ allow 205.185.124.176;
 allow 205.185.124.193;
 allow 206.188.196.161;
 allow 206.237.98.52;
-allow 208.109.215.188;
-allow 208.109.36.224;
 allow 209.141.32.198;
 allow 209.141.38.110;
 allow 209.141.39.104;
@@ -1024,9 +1020,9 @@ allow 2.58.56.90;
 allow 2.58.95.31;
 allow 2.58.95.35;
 allow 2.58.95.38;
-allow 2600:3c00:e000:4ee::2;
+allow 2600:3c00:e000:4ee::3;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
-allow 2600:3c03:e000:fa::3;
+allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c0d::f03c:94ff:fe42:512f;
@@ -1044,10 +1040,6 @@ allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
-allow 2603:3:6106:2460::;
-allow 2603:3:6107:47a0::;
-allow 2603:3:610a:5050::;
-allow 2603:3:610c:7640::;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
@@ -1262,6 +1254,7 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e00::f03c:93ff:fef8:bd9b;
 allow 2a01:7e01::f03c:93ff:fef8:bd60;
+allow 2a02:13f0:8100:6:205:ce4a:e2d2:1;
 allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
@@ -1630,6 +1623,7 @@ allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c814::2;
 allow 2a12:5940:c826::2;
+allow 2a12:5940:d0e2::2;
 allow 2a12:5940:f0a8::2;
 allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
@@ -1638,6 +1632,7 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
+allow 3.232.179.65;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 3.67.194.114;
@@ -1691,6 +1686,7 @@ allow 45.151.167.11;
 allow 45.151.167.12;
 allow 45.151.167.13;
 allow 45.15.157.177;
+allow 45.15.158.165;
 allow 45.15.158.39;
 allow 45.156.26.111;
 allow 45.56.81.190;
@@ -1756,7 +1752,6 @@ allow 51.91.18.151;
 allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.3.77.163;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.101.10;
@@ -1806,7 +1801,6 @@ allow 66.220.242.222;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 72.14.179.10;
-allow 72.167.47.69;
 allow 74.207.248.172;
 allow 74.82.47.194;
 allow 77.105.146.42;
