--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -146,6 +146,7 @@ allow 152.89.233.169;
 allow 154.16.116.61;
 allow 155.4.102.252;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -204,6 +205,8 @@ allow 178.17.174.198;
 allow 178.175.131.141;
 allow 178.175.142.26;
 allow 178.175.148.209;
+allow 178.20.55.16;
+allow 178.20.55.182;
 allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
@@ -260,6 +263,7 @@ allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
+allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
@@ -557,6 +561,7 @@ allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
 allow 191.101.31.10;
+allow 191.252.220.31;
 allow 191.96.165.34;
 allow 192.153.57.177;
 allow 192.153.57.19;
@@ -647,7 +652,6 @@ allow 193.218.118.89;
 allow 193.218.118.91;
 allow 193.233.133.109;
 allow 193.239.232.102;
-allow 193.239.232.230;
 allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.35.18.105;
@@ -832,7 +836,6 @@ allow 2001:678:e3c::a;
 allow 2001:678:e3c::b;
 allow 2001:678:e3c::c;
 allow 2001:678:e3c::d;
-allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
 allow 2001:67c:289c:2::234;
@@ -1242,6 +1245,8 @@ allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:3f::c0cc:80;
 allow 2a00:1728:f:f:f:f:c03c:9898;
+allow 2a00:1b88:4::2;
+allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::a568;
@@ -1384,6 +1389,7 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
+allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
@@ -1614,7 +1620,6 @@ allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
-allow 2a12:1e01::2;
 allow 2a12:3e80:2:29::;
 allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
@@ -1623,6 +1628,7 @@ allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c814::2;
+allow 2a12:5940:c826::2;
 allow 2a12:5940:d0e2::2;
 allow 2a12:5940:f0a8::2;
 allow 2a12:8641:3:12::;
@@ -1631,7 +1637,6 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 31.42.185.134;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 3.67.194.114;
@@ -1648,7 +1653,7 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
-allow 44.215.155.119;
+allow 44.195.141.41;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.132.246.245;
@@ -1753,7 +1758,6 @@ allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1830,7 +1834,6 @@ allow 81.16.33.42;
 allow 81.17.28.95;
 allow 82.118.242.158;
 allow 82.118.242.36;
-allow 82.153.138.182;
 allow 82.153.138.48;
 allow 82.153.138.79;
 allow 82.197.182.161;
@@ -1890,7 +1893,6 @@ allow 91.132.144.59;
 allow 91.139.160.150;
 allow 91.203.144.194;
 allow 91.203.145.116;
-allow 91.206.26.26;
 allow 91.208.75.153;
 allow 91.208.75.156;
 allow 91.208.75.178;
@@ -1941,6 +1943,7 @@ allow 94.177.106.46;
 allow 94.177.106.54;
 allow 94.177.106.55;
 allow 94.177.106.59;
+allow 94.228.163.25;
 allow 94.228.169.70;
 allow 94.230.208.147;
 allow 94.230.208.148;
