--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,4 +1,3 @@
-allow 100.26.78.150;
 allow 102.130.113.9;
 allow 102.130.127.117;
 allow 102.219.85.85;
@@ -189,7 +188,6 @@ allow 171.25.193.80;
 allow 172.104.182.84;
 allow 172.104.214.41;
 allow 172.232.161.205;
-allow 172.233.16.74;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
@@ -221,6 +219,7 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.236.247.122;
+allow 178.31.20.83;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -272,7 +271,6 @@ allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
-allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
@@ -1040,7 +1038,6 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
-allow 2600:3c0d::f03c:94ff:fe42:512f;
 allow 2602:2e6:0:6::;
 allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:66c4::1;
@@ -1055,6 +1052,7 @@ allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
+allow 2603:3:610a:5050::;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
@@ -1311,7 +1309,6 @@ allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
 allow 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 allow 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 allow 2a03:4000:55:efb::1003;
-allow 2a03:4000:55:efb::a1;
 allow 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 allow 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 allow 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
@@ -1390,6 +1387,7 @@ allow 2a05:b0c7:67b0::1;
 allow 2a05:b0c7:67bb::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6841::1;
+allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:696c::1;
 allow 2a05:b0c7:6978::1;
 allow 2a05:b0c7:6b6c::1;
@@ -1407,7 +1405,6 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
-allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
@@ -1420,6 +1417,7 @@ allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
+allow 2a0a:4cc0:1:2d1::a;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
@@ -1711,7 +1709,6 @@ allow 45.151.167.13;
 allow 45.15.157.177;
 allow 45.15.158.165;
 allow 45.15.158.39;
-allow 45.156.26.111;
 allow 45.61.137.5;
 allow 45.61.184.47;
 allow 45.61.185.172;
@@ -1773,6 +1770,7 @@ allow 51.91.18.151;
 allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.204.218.187;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.101.10;
@@ -1821,6 +1819,7 @@ allow 66.220.242.222;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 72.14.179.10;
+allow 72.167.47.69;
 allow 74.207.248.172;
 allow 74.82.47.194;
 allow 77.105.146.42;
@@ -1839,7 +1838,6 @@ allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
-allow 79.102.130.166;
 allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
@@ -1858,7 +1856,6 @@ allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.131.71;
 allow 82.221.139.190;
-allow 82.68.49.227;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
@@ -1870,6 +1867,7 @@ allow 84.38.134.224;
 allow 84.38.134.225;
 allow 84.38.134.226;
 allow 84.38.134.227;
+allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
