Update lists at 20240412-1201

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -155,6 +155,7 @@ allow 151.80.148.159;
 allow 152.89.233.169;
 allow 155.4.102.252;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -550,8 +551,6 @@ allow 185.42.170.203;
 allow 185.56.171.94;
 allow 185.56.83.83;
 allow 185.67.82.114;
-allow 185.70.8.45;
-allow 185.70.8.46;
 allow 185.7.33.146;
 allow 185.82.219.109;
 allow 185.84.31.254;
@@ -567,7 +566,6 @@ allow 188.68.52.231;
 allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
-allow 191.101.31.10;
 allow 191.252.220.31;
 allow 191.96.165.34;
 allow 192.153.57.177;
@@ -1017,6 +1015,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 23.94.36.142;
@@ -1038,6 +1037,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
+allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:66c4::1;
@@ -1376,8 +1376,6 @@ allow 2a04:52c0:120:a13d::1;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
-allow 2a05:26c0:d1:12:acdc:feed:beef:66;
-allow 2a05:26c0:d1:12:acdc:feed:beef:99;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1770,7 +1768,6 @@ allow 51.91.18.151;
 allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.204.218.187;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.101.10;
@@ -1798,6 +1795,7 @@ allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 54.224.79.94;
+allow 54.243.147.26;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
