--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -155,6 +155,7 @@ deny 151.80.148.159;
 deny 152.89.233.169;
 deny 155.4.102.252;
 deny 160.119.249.240;
+deny 161.35.129.51;
 deny 162.247.72.192;
 deny 162.247.72.199;
 deny 162.247.74.200;
@@ -550,8 +551,6 @@ deny 185.42.170.203;
 deny 185.56.171.94;
 deny 185.56.83.83;
 deny 185.67.82.114;
-deny 185.70.8.45;
-deny 185.70.8.46;
 deny 185.7.33.146;
 deny 185.82.219.109;
 deny 185.84.31.254;
@@ -567,7 +566,6 @@ deny 188.68.52.231;
 deny 190.103.179.98;
 deny 190.120.229.98;
 deny 190.211.254.97;
-deny 191.101.31.10;
 deny 191.252.220.31;
 deny 191.96.165.34;
 deny 192.153.57.177;
@@ -1017,6 +1015,7 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.6;
+deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.94.211.25;
 deny 23.94.36.142;
@@ -1038,6 +1037,7 @@ deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::2;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
+deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:fc24:11:26c3::1;
 deny 2602:fc24:11:66c4::1;
@@ -1376,8 +1376,6 @@ deny 2a04:52c0:120:a13d::1;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
 deny 2a04:9dc0:31::c0cc:4d;
-deny 2a05:26c0:d1:12:acdc:feed:beef:66;
-deny 2a05:26c0:d1:12:acdc:feed:beef:99;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -1770,7 +1768,6 @@ deny 51.91.18.151;
 deny 5.196.73.12;
 deny 5.196.8.113;
 deny 5.196.95.34;
-deny 52.204.218.187;
 deny 5.255.100.219;
 deny 5.255.100.26;
 deny 5.255.101.10;
@@ -1798,6 +1795,7 @@ deny 5.2.67.226;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 54.224.79.94;
+deny 54.243.147.26;
 deny 5.42.66.6;
 deny 5.42.80.232;
 deny 5.42.80.233;
