--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -129,6 +129,7 @@ deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::2;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
+deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:fc24:11:26c3::1;
 deny 2602:fc24:11:66c4::1;
@@ -466,8 +467,6 @@ deny 2a04:52c0:120:a13d::1;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
 deny 2a04:9dc0:31::c0cc:4d;
-deny 2a05:26c0:d1:12:acdc:feed:beef:66;
-deny 2a05:26c0:d1:12:acdc:feed:beef:99;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
