--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -129,6 +129,7 @@ set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::2;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:fc24:11:26c3::1;
 set_real_ip_from 2602:fc24:11:66c4::1;
@@ -466,8 +467,6 @@ set_real_ip_from 2a04:52c0:120:a13d::1;
 set_real_ip_from 2a04:52c0:130:896e::1;
 set_real_ip_from 2a04:52c0:130:d285::1;
 set_real_ip_from 2a04:9dc0:31::c0cc:4d;
-set_real_ip_from 2a05:26c0:d1:12:acdc:feed:beef:66;
-set_real_ip_from 2a05:26c0:d1:12:acdc:feed:beef:99;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
