Update lists at 20240412-1801

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,7 +6,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -94,7 +93,6 @@ allow 107.189.8.133;
 allow 107.189.8.181;
 allow 107.189.8.226;
 allow 107.189.8.238;
-allow 107.189.8.5;
 allow 107.189.8.56;
 allow 107.189.8.65;
 allow 108.181.27.205;
@@ -123,7 +121,6 @@ allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.31.0.13;
-allow 130.193.15.186;
 allow 135.125.205.25;
 allow 136.244.111.163;
 allow 137.63.71.51;
@@ -271,6 +268,7 @@ allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
+allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
@@ -1384,7 +1382,6 @@ allow 2a05:b0c7:67b0::1;
 allow 2a05:b0c7:67bb::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6841::1;
-allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:696c::1;
 allow 2a05:b0c7:6978::1;
 allow 2a05:b0c7:6b6c::1;
@@ -1402,6 +1399,7 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
+allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
@@ -1651,6 +1649,7 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
+allow 3.214.10.135;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 3.67.194.114;
@@ -1767,9 +1766,7 @@ allow 51.91.18.151;
 allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.44.12.241;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1864,7 +1861,6 @@ allow 84.38.134.224;
 allow 84.38.134.225;
 allow 84.38.134.226;
 allow 84.38.134.227;
-allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
@@ -1872,7 +1868,7 @@ allow 85.204.116.211;
 allow 85.215.76.62;
 allow 86.104.194.13;
 allow 87.118.110.27;
-allow 87.118.114.44;
+allow 87.118.115.44;
 allow 87.118.116.103;
 allow 87.118.116.90;
 allow 87.118.122.30;
@@ -1949,6 +1945,7 @@ allow 94.16.116.81;
 allow 94.16.116.86;
 allow 94.16.121.226;
 allow 94.16.121.91;
+allow 94.177.106.37;
 allow 94.177.106.46;
 allow 94.177.106.54;
 allow 94.177.106.55;
