--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -476,7 +476,6 @@ allow 2a05:b0c7:67b0::1;
 allow 2a05:b0c7:67bb::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6841::1;
-allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:696c::1;
 allow 2a05:b0c7:6978::1;
 allow 2a05:b0c7:6b6c::1;
@@ -494,6 +493,7 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
+allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
