--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,4 +1,5 @@
 allow 102.130.113.9;
+allow 102.130.123.16;
 allow 102.130.127.117;
 allow 102.219.85.85;
 allow 103.109.101.105;
@@ -44,6 +45,7 @@ allow 107.174.138.172;
 allow 107.174.231.197;
 allow 107.189.10.175;
 allow 107.189.11.111;
+allow 107.189.1.160;
 allow 107.189.1.175;
 allow 107.189.11.80;
 allow 107.189.1.198;
@@ -200,7 +202,6 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.58.89.182;
 allow 178.170.37.11;
-allow 178.17.170.184;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
@@ -652,7 +653,6 @@ allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.218.118.91;
 allow 193.233.133.109;
-allow 193.239.232.102;
 allow 193.239.232.230;
 allow 193.26.115.43;
 allow 193.26.115.61;
@@ -1010,6 +1010,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.239;
 allow 23.94.211.25;
@@ -1032,6 +1033,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::3;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
+allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::14;
 allow 2602:fc24:11:26c3::1;
@@ -1085,6 +1087,7 @@ allow 2605:6400:30:ebb6:532:acc:65:31;
 allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:ed65:a5f1:548c:47c3:6185;
 allow 2605:6400:30:edc3::34;
+allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:ef95:daa6:bd3c:c413:da7e;
 allow 2605:6400:30:efb2::;
 allow 2605:6400:30:efba:dead::;
@@ -1259,7 +1262,6 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
-allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
@@ -1648,6 +1650,7 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
+allow 3.222.150.214;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 3.67.194.114;
@@ -1664,7 +1667,6 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
-allow 3.93.105.16;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.132.246.245;
@@ -1861,7 +1863,6 @@ allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.247.165.51;
 allow 84.38.134.224;
-allow 84.38.134.225;
 allow 84.38.134.226;
 allow 84.38.134.227;
 allow 84.54.51.61;
@@ -1917,6 +1918,7 @@ allow 91.210.59.57;
 allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
+allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.119.126.161;
 allow 92.205.129.119;
