--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1,4 +1,5 @@
 set_real_ip_from 102.130.113.9;
+set_real_ip_from 102.130.123.16;
 set_real_ip_from 102.130.127.117;
 set_real_ip_from 102.219.85.85;
 set_real_ip_from 103.109.101.105;
@@ -44,6 +45,7 @@ set_real_ip_from 107.174.138.172;
 set_real_ip_from 107.174.231.197;
 set_real_ip_from 107.189.10.175;
 set_real_ip_from 107.189.11.111;
+set_real_ip_from 107.189.1.160;
 set_real_ip_from 107.189.1.175;
 set_real_ip_from 107.189.11.80;
 set_real_ip_from 107.189.1.198;
@@ -200,7 +202,6 @@ set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
 set_real_ip_from 178.170.37.11;
-set_real_ip_from 178.17.170.184;
 set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
 set_real_ip_from 178.17.174.14;
@@ -652,7 +653,6 @@ set_real_ip_from 193.218.118.188;
 set_real_ip_from 193.218.118.89;
 set_real_ip_from 193.218.118.91;
 set_real_ip_from 193.233.133.109;
-set_real_ip_from 193.239.232.102;
 set_real_ip_from 193.239.232.230;
 set_real_ip_from 193.26.115.43;
 set_real_ip_from 193.26.115.61;
@@ -1010,6 +1010,7 @@ set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.6;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.26.133.239;
 set_real_ip_from 23.94.211.25;
@@ -1032,6 +1033,7 @@ set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::3;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:f9f3:0:2::14;
 set_real_ip_from 2602:fc24:11:26c3::1;
@@ -1085,6 +1087,7 @@ set_real_ip_from 2605:6400:30:ebb6:532:acc:65:31;
 set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
 set_real_ip_from 2605:6400:30:ed65:a5f1:548c:47c3:6185;
 set_real_ip_from 2605:6400:30:edc3::34;
+set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:ef95:daa6:bd3c:c413:da7e;
 set_real_ip_from 2605:6400:30:efb2::;
 set_real_ip_from 2605:6400:30:efba:dead::;
@@ -1259,7 +1262,6 @@ set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:138::94d2;
 set_real_ip_from 2a00:1dc0:caff:15::45dc;
-set_real_ip_from 2a00:1dc0:caff:178::982b;
 set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:99a0:0:1000::2;
@@ -1648,6 +1650,7 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 3.222.150.214;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 35.240.241.135;
 set_real_ip_from 3.67.194.114;
@@ -1664,7 +1667,6 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 3.93.105.16;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.232.151;
 set_real_ip_from 45.132.246.245;
@@ -1861,7 +1863,6 @@ set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.247.165.51;
 set_real_ip_from 84.38.134.224;
-set_real_ip_from 84.38.134.225;
 set_real_ip_from 84.38.134.226;
 set_real_ip_from 84.38.134.227;
 set_real_ip_from 84.54.51.61;
@@ -1917,6 +1918,7 @@ set_real_ip_from 91.210.59.57;
 set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.237.56;
 set_real_ip_from 91.219.239.166;
+set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.119.126.161;
 set_real_ip_from 92.205.129.119;
