--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -359,7 +359,6 @@ allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
-allow 2a00:c70:2017:1::169;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -480,7 +479,6 @@ allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:696c::1;
 allow 2a05:b0c7:6978::1;
 allow 2a05:b0c7:6b6c::1;
-allow 2a05:b0c7:6b72::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6c28::1;
 allow 2a05:b0c7:6cd8::1;
@@ -712,6 +710,7 @@ allow 2a0f:df00:0:255::199;
 allow 2a0f:df00:0:255::200;
 allow 2a0f:df00:0:255::201;
 allow 2a0f:df00:0:255::202;
+allow 2a0f:df00:0:255::203;
 allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
