--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -82,7 +82,6 @@ set_real_ip_from 107.189.5.121;
 set_real_ip_from 107.189.5.18;
 set_real_ip_from 107.189.5.19;
 set_real_ip_from 107.189.5.7;
-set_real_ip_from 107.189.5.80;
 set_real_ip_from 107.189.6.124;
 set_real_ip_from 107.189.7.114;
 set_real_ip_from 107.189.7.141;
@@ -154,7 +153,6 @@ set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.89.233.169;
 set_real_ip_from 155.4.102.252;
 set_real_ip_from 160.119.249.240;
-set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.247.72.192;
 set_real_ip_from 162.247.72.199;
 set_real_ip_from 162.247.74.200;
@@ -201,7 +199,6 @@ set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
-set_real_ip_from 178.170.37.11;
 set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
 set_real_ip_from 178.17.174.14;
@@ -643,6 +640,7 @@ set_real_ip_from 193.189.100.199;
 set_real_ip_from 193.189.100.200;
 set_real_ip_from 193.189.100.201;
 set_real_ip_from 193.189.100.202;
+set_real_ip_from 193.189.100.203;
 set_real_ip_from 193.189.100.204;
 set_real_ip_from 193.189.100.205;
 set_real_ip_from 193.189.100.206;
@@ -1263,7 +1261,6 @@ set_real_ip_from 2a00:1dc0:caff:15::45dc;
 set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:99a0:0:1000::2;
-set_real_ip_from 2a00:c70:2017:1::169;
 set_real_ip_from 2a01:4262:1ab:ffff::133;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
@@ -1384,7 +1381,6 @@ set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:696c::1;
 set_real_ip_from 2a05:b0c7:6978::1;
 set_real_ip_from 2a05:b0c7:6b6c::1;
-set_real_ip_from 2a05:b0c7:6b72::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:b0c7:6c28::1;
 set_real_ip_from 2a05:b0c7:6cd8::1;
@@ -1616,6 +1612,7 @@ set_real_ip_from 2a0f:df00:0:255::199;
 set_real_ip_from 2a0f:df00:0:255::200;
 set_real_ip_from 2a0f:df00:0:255::201;
 set_real_ip_from 2a0f:df00:0:255::202;
+set_real_ip_from 2a0f:df00:0:255::203;
 set_real_ip_from 2a0f:df00:0:255::204;
 set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
@@ -1646,6 +1643,7 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 3.230.90.193;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 35.240.241.135;
 set_real_ip_from 3.67.194.114;
@@ -1655,6 +1653,7 @@ set_real_ip_from 37.120.188.156;
 set_real_ip_from 37.120.239.59;
 set_real_ip_from 37.187.5.192;
 set_real_ip_from 37.228.129.128;
+set_real_ip_from 37.228.129.5;
 set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.252.254.33;
 set_real_ip_from 37.252.255.135;
@@ -1662,9 +1661,7 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 44.198.126.87;
 set_real_ip_from 45.12.3.80;
-set_real_ip_from 45.128.232.151;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.132.20;
@@ -1763,6 +1760,7 @@ set_real_ip_from 5.196.73.12;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.190;
@@ -1841,6 +1839,7 @@ set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
 set_real_ip_from 82.118.242.158;
 set_real_ip_from 82.118.242.36;
+set_real_ip_from 82.153.138.119;
 set_real_ip_from 82.153.138.182;
 set_real_ip_from 82.153.138.48;
 set_real_ip_from 82.197.182.161;
