--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,7 +6,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -82,6 +81,7 @@ allow 107.189.5.121;
 allow 107.189.5.18;
 allow 107.189.5.19;
 allow 107.189.5.7;
+allow 107.189.5.80;
 allow 107.189.6.124;
 allow 107.189.7.114;
 allow 107.189.7.141;
@@ -213,6 +213,7 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.236.247.122;
+allow 178.30.67.161;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -245,7 +246,6 @@ allow 185.106.94.195;
 allow 185.107.70.56;
 allow 185.112.146.168;
 allow 185.113.128.30;
-allow 185.126.117.21;
 allow 185.129.61.1;
 allow 185.129.61.10;
 allow 185.129.61.2;
@@ -267,7 +267,6 @@ allow 185.146.232.234;
 allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
-allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
 allow 185.165.169.42;
@@ -1008,6 +1007,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
+allow 23.184.48.208;
 allow 23.236.122.62;
 allow 23.26.133.239;
 allow 23.94.211.25;
@@ -1025,9 +1025,9 @@ allow 2.58.56.90;
 allow 2.58.95.31;
 allow 2.58.95.35;
 allow 2.58.95.38;
-allow 2600:3c00:e000:4ee::2;
+allow 2600:3c00:e000:4ee::3;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
-allow 2600:3c03:e000:fa::3;
+allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e6:0:6::;
@@ -1040,6 +1040,7 @@ allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
+allow 2602:fc24:18:df04::1;
 allow 2602:fc24:19:95b7::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
@@ -1381,6 +1382,7 @@ allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:696c::1;
 allow 2a05:b0c7:6978::1;
 allow 2a05:b0c7:6b6c::1;
+allow 2a05:b0c7:6b72::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6c28::1;
 allow 2a05:b0c7:6cd8::1;
@@ -1643,7 +1645,6 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
-allow 3.230.90.193;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 3.67.194.114;
@@ -1662,6 +1663,7 @@ allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
 allow 45.12.3.80;
+allow 45.128.232.151;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
@@ -1827,13 +1829,13 @@ allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
-allow 79.102.135.53;
 allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
+allow 80.78.21.63;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
