--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -6,7 +6,6 @@ deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
 deny 103.172.134.26;
-deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.196.37.111;
 deny 103.208.86.5;
@@ -82,6 +81,7 @@ deny 107.189.5.121;
 deny 107.189.5.18;
 deny 107.189.5.19;
 deny 107.189.5.7;
+deny 107.189.5.80;
 deny 107.189.6.124;
 deny 107.189.7.114;
 deny 107.189.7.141;
@@ -213,6 +213,7 @@ deny 178.218.144.51;
 deny 178.218.144.64;
 deny 178.218.144.96;
 deny 178.236.247.122;
+deny 178.30.67.161;
 deny 179.43.128.16;
 deny 179.43.159.194;
 deny 179.43.159.195;
@@ -245,7 +246,6 @@ deny 185.106.94.195;
 deny 185.107.70.56;
 deny 185.112.146.168;
 deny 185.113.128.30;
-deny 185.126.117.21;
 deny 185.129.61.1;
 deny 185.129.61.10;
 deny 185.129.61.2;
@@ -267,7 +267,6 @@ deny 185.146.232.234;
 deny 185.146.232.243;
 deny 185.14.97.37;
 deny 185.153.197.227;
-deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
 deny 185.165.169.42;
@@ -1008,6 +1007,7 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.6;
+deny 23.184.48.208;
 deny 23.236.122.62;
 deny 23.26.133.239;
 deny 23.94.211.25;
@@ -1025,9 +1025,9 @@ deny 2.58.56.90;
 deny 2.58.95.31;
 deny 2.58.95.35;
 deny 2.58.95.38;
-deny 2600:3c00:e000:4ee::2;
+deny 2600:3c00:e000:4ee::3;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
-deny 2600:3c03:e000:fa::3;
+deny 2600:3c03:e000:fa::1;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2602:2e6:0:6::;
@@ -1040,6 +1040,7 @@ deny 2602:fc24:12:759::1;
 deny 2602:fc24:12:77c0::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
+deny 2602:fc24:18:df04::1;
 deny 2602:fc24:19:95b7::1;
 deny 2602:fccf:310:1::a;
 deny 2602:fccf:310:1::b;
@@ -1381,6 +1382,7 @@ deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:696c::1;
 deny 2a05:b0c7:6978::1;
 deny 2a05:b0c7:6b6c::1;
+deny 2a05:b0c7:6b72::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6c28::1;
 deny 2a05:b0c7:6cd8::1;
@@ -1643,7 +1645,6 @@ deny 31.129.22.65;
 deny 31.220.87.46;
 deny 31.220.98.139;
 deny 31.42.185.134;
-deny 3.230.90.193;
 deny 35.0.127.52;
 deny 35.240.241.135;
 deny 3.67.194.114;
@@ -1662,6 +1663,7 @@ deny 37.48.70.156;
 deny 38.242.254.131;
 deny 38.97.116.244;
 deny 45.12.3.80;
+deny 45.128.232.151;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.135.132.20;
@@ -1827,13 +1829,13 @@ deny 77.91.85.147;
 deny 77.91.86.95;
 deny 77.91.87.79;
 deny 78.142.18.219;
-deny 79.102.135.53;
 deny 79.124.8.241;
 deny 79.137.198.213;
 deny 80.210.78.252;
 deny 80.241.60.207;
 deny 80.67.167.81;
 deny 80.67.172.162;
+deny 80.78.21.63;
 deny 80.82.78.14;
 deny 81.16.33.42;
 deny 81.17.28.95;
