--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,6 +6,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -100,7 +101,6 @@ allow 108.181.69.243;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
-allow 109.201.133.100;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -213,13 +213,13 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.236.247.122;
-allow 178.30.67.161;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
 allow 179.43.159.196;
 allow 179.43.159.197;
 allow 179.43.159.198;
+allow 179.43.159.199;
 allow 179.43.159.200;
 allow 179.43.159.201;
 allow 179.43.159.78;
@@ -228,7 +228,6 @@ allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
 allow 184.105.48.40;
-allow 184.72.188.212;
 allow 185.100.85.132;
 allow 185.100.85.22;
 allow 185.100.85.23;
@@ -956,6 +955,7 @@ allow 209.141.50.178;
 allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
+allow 209.141.55.26;
 allow 209.141.59.116;
 allow 209.141.62.71;
 allow 212.21.66.6;
@@ -1007,7 +1007,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
-allow 23.184.48.208;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.239;
 allow 23.94.211.25;
@@ -1030,6 +1030,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
+allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::14;
 allow 2602:fc24:11:26c3::1;
@@ -1040,7 +1041,6 @@ allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
-allow 2602:fc24:18:df04::1;
 allow 2602:fc24:19:95b7::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
@@ -1072,6 +1072,7 @@ allow 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 allow 2605:6400:20:2417::69;
 allow 2605:6400:20:3ea:c2a3:1162:7224:e5df;
 allow 2605:6400:20:482:3920:1829:1839:1293;
+allow 2605:6400:20:be7::1;
 allow 2605:6400:20:ff9::1;
 allow 2605:6400:30:e88d:36fc:7ca1:dff5:1e57;
 allow 2605:6400:30:e948:4cee:191b:1e55:25b3;
@@ -1735,6 +1736,7 @@ allow 46.38.255.27;
 allow 46.41.150.103;
 allow 47.243.103.140;
 allow 47.243.74.136;
+allow 50.16.206.21;
 allow 50.3.182.133;
 allow 50.3.182.156;
 allow 51.15.249.160;
@@ -1833,7 +1835,6 @@ allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
-allow 80.78.21.63;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
@@ -1897,6 +1898,7 @@ allow 89.58.63.200;
 allow 91.103.253.141;
 allow 91.132.144.59;
 allow 91.139.160.150;
+allow 91.193.18.63;
 allow 91.203.144.194;
 allow 91.203.145.116;
 allow 91.206.26.26;
