--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -352,6 +352,7 @@ allow 2a00:1169:119:b120::;
 allow 2a00:1169:11f:d680::;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
+allow 2a00:1728:3f::c0cc:80;
 allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
