Update lists at 20240415-0600

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -6,6 +6,7 @@ deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
 deny 103.172.134.26;
+deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.196.37.111;
 deny 103.208.86.5;
@@ -214,7 +215,6 @@ deny 178.218.144.51;
 deny 178.218.144.64;
 deny 178.218.144.96;
 deny 178.236.247.122;
-deny 179.43.128.16;
 deny 179.43.159.194;
 deny 179.43.159.195;
 deny 179.43.159.196;
@@ -631,7 +631,6 @@ deny 192.99.168.180;
 deny 193.105.134.150;
 deny 193.105.134.155;
 deny 193.168.141.245;
-deny 193.187.255.165;
 deny 193.189.100.194;
 deny 193.189.100.195;
 deny 193.189.100.196;
@@ -661,6 +660,7 @@ deny 193.35.18.49;
 deny 193.35.18.77;
 deny 194.15.112.133;
 deny 194.15.113.118;
+deny 194.15.115.212;
 deny 194.163.157.49;
 deny 194.195.120.132;
 deny 194.26.192.64;
@@ -1029,7 +1029,7 @@ deny 2.58.95.35;
 deny 2.58.95.38;
 deny 2600:3c00:e000:4ee::3;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
-deny 2600:3c03:e000:fa::1;
+deny 2600:3c03:e000:fa::3;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2602:2e6:0:6::;
@@ -1276,7 +1276,6 @@ deny 2a01:7e01::f03c:93ff:fef8:bd60;
 deny 2a02:13f0:8100:6:205:ce4a:e2d2:1;
 deny 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 deny 2a02:16d0:0:5::1;
-deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
 deny 2a02:7aa0:1619::ba45:e7f2;
@@ -1598,6 +1597,7 @@ deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:e300::23;
+deny 2a0d:3e83:1:b284::1;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:97c0:470::30;
 deny 2a0e:d602:1:14bc::2;
@@ -1627,7 +1627,6 @@ deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:1e01::2;
-deny 2a12:3e80:2:29::;
 deny 2a12:5940:13e2::2;
 deny 2a12:5940:144f::2;
 deny 2a12:5940:1733::2;
@@ -1646,7 +1645,7 @@ deny 31.129.22.65;
 deny 31.220.87.46;
 deny 31.220.98.139;
 deny 31.42.185.134;
-deny 3.222.170.162;
+deny 34.230.113.126;
 deny 35.0.127.52;
 deny 35.240.241.135;
 deny 3.67.194.114;
@@ -1731,7 +1730,6 @@ deny 45.95.169.228;
 deny 45.95.169.255;
 deny 45.95.202.48;
 deny 46.166.139.111;
-deny 46.182.21.248;
 deny 46.226.164.14;
 deny 46.232.251.191;
 deny 46.234.47.105;
@@ -1841,7 +1839,7 @@ deny 80.210.78.252;
 deny 80.241.60.207;
 deny 80.67.167.81;
 deny 80.67.172.162;
-deny 80.78.21.135;
+deny 80.78.21.62;
 deny 80.82.78.14;
 deny 81.16.33.42;
 deny 81.17.28.95;
@@ -1860,13 +1858,11 @@ deny 83.217.9.73;
 deny 83.96.213.63;
 deny 83.97.20.77;
 deny 84.16.224.227;
-deny 84.211.225.54;
 deny 84.239.46.144;
 deny 84.247.165.51;
 deny 84.38.134.224;
 deny 84.38.134.225;
 deny 84.38.134.226;
-deny 84.38.134.227;
 deny 84.54.51.61;
 deny 84.54.51.68;
 deny 84.54.51.69;
@@ -1917,6 +1913,7 @@ deny 91.208.75.178;
 deny 91.208.75.239;
 deny 91.208.75.3;
 deny 91.208.75.4;
+deny 91.210.59.57;
 deny 91.219.236.101;
 deny 91.219.237.56;
 deny 91.219.239.166;
