--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,6 +6,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -214,7 +215,6 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.236.247.122;
-allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
 allow 179.43.159.196;
@@ -631,7 +631,6 @@ allow 192.99.168.180;
 allow 193.105.134.150;
 allow 193.105.134.155;
 allow 193.168.141.245;
-allow 193.187.255.165;
 allow 193.189.100.194;
 allow 193.189.100.195;
 allow 193.189.100.196;
@@ -661,6 +660,7 @@ allow 193.35.18.49;
 allow 193.35.18.77;
 allow 194.15.112.133;
 allow 194.15.113.118;
+allow 194.15.115.212;
 allow 194.163.157.49;
 allow 194.195.120.132;
 allow 194.26.192.64;
@@ -1029,7 +1029,7 @@ allow 2.58.95.35;
 allow 2.58.95.38;
 allow 2600:3c00:e000:4ee::3;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
-allow 2600:3c03:e000:fa::1;
+allow 2600:3c03:e000:fa::3;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e6:0:6::;
@@ -1276,7 +1276,6 @@ allow 2a01:7e01::f03c:93ff:fef8:bd60;
 allow 2a02:13f0:8100:6:205:ce4a:e2d2:1;
 allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:16d0:0:5::1;
-allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:7aa0:1619::ba45:e7f2;
@@ -1598,6 +1597,7 @@ allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:e300::23;
+allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:470::30;
 allow 2a0e:d602:1:14bc::2;
@@ -1627,7 +1627,6 @@ allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
-allow 2a12:3e80:2:29::;
 allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
 allow 2a12:5940:1733::2;
@@ -1646,7 +1645,7 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
-allow 3.222.170.162;
+allow 34.230.113.126;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 3.67.194.114;
@@ -1731,7 +1730,6 @@ allow 45.95.169.228;
 allow 45.95.169.255;
 allow 45.95.202.48;
 allow 46.166.139.111;
-allow 46.182.21.248;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1841,7 +1839,7 @@ allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
-allow 80.78.21.135;
+allow 80.78.21.62;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
@@ -1860,13 +1858,11 @@ allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
-allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.247.165.51;
 allow 84.38.134.224;
 allow 84.38.134.225;
 allow 84.38.134.226;
-allow 84.38.134.227;
 allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
@@ -1917,6 +1913,7 @@ allow 91.208.75.178;
 allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
+allow 91.210.59.57;
 allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
