--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -6,6 +6,7 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -214,7 +215,6 @@ set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.236.247.122;
-set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
 set_real_ip_from 179.43.159.196;
@@ -631,7 +631,6 @@ set_real_ip_from 192.99.168.180;
 set_real_ip_from 193.105.134.150;
 set_real_ip_from 193.105.134.155;
 set_real_ip_from 193.168.141.245;
-set_real_ip_from 193.187.255.165;
 set_real_ip_from 193.189.100.194;
 set_real_ip_from 193.189.100.195;
 set_real_ip_from 193.189.100.196;
@@ -661,6 +660,7 @@ set_real_ip_from 193.35.18.49;
 set_real_ip_from 193.35.18.77;
 set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
+set_real_ip_from 194.15.115.212;
 set_real_ip_from 194.163.157.49;
 set_real_ip_from 194.195.120.132;
 set_real_ip_from 194.26.192.64;
@@ -1029,7 +1029,7 @@ set_real_ip_from 2.58.95.35;
 set_real_ip_from 2.58.95.38;
 set_real_ip_from 2600:3c00:e000:4ee::3;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
-set_real_ip_from 2600:3c03:e000:fa::1;
+set_real_ip_from 2600:3c03:e000:fa::3;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2602:2e6:0:6::;
@@ -1276,7 +1276,6 @@ set_real_ip_from 2a01:7e01::f03c:93ff:fef8:bd60;
 set_real_ip_from 2a02:13f0:8100:6:205:ce4a:e2d2:1;
 set_real_ip_from 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 set_real_ip_from 2a02:16d0:0:5::1;
-set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:7aa0:1619::ba45:e7f2;
@@ -1598,6 +1597,7 @@ set_real_ip_from 2a0b:f4c2::7;
 set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
 set_real_ip_from 2a0c:e300::23;
+set_real_ip_from 2a0d:3e83:1:b284::1;
 set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:d602:1:14bc::2;
@@ -1627,7 +1627,6 @@ set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:1e01::2;
-set_real_ip_from 2a12:3e80:2:29::;
 set_real_ip_from 2a12:5940:13e2::2;
 set_real_ip_from 2a12:5940:144f::2;
 set_real_ip_from 2a12:5940:1733::2;
@@ -1646,7 +1645,7 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 3.222.170.162;
+set_real_ip_from 34.230.113.126;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 35.240.241.135;
 set_real_ip_from 3.67.194.114;
@@ -1731,7 +1730,6 @@ set_real_ip_from 45.95.169.228;
 set_real_ip_from 45.95.169.255;
 set_real_ip_from 45.95.202.48;
 set_real_ip_from 46.166.139.111;
-set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.226.164.14;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
@@ -1841,7 +1839,7 @@ set_real_ip_from 80.210.78.252;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
-set_real_ip_from 80.78.21.135;
+set_real_ip_from 80.78.21.62;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
@@ -1860,13 +1858,11 @@ set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
-set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.247.165.51;
 set_real_ip_from 84.38.134.224;
 set_real_ip_from 84.38.134.225;
 set_real_ip_from 84.38.134.226;
-set_real_ip_from 84.38.134.227;
 set_real_ip_from 84.54.51.61;
 set_real_ip_from 84.54.51.68;
 set_real_ip_from 84.54.51.69;
@@ -1917,6 +1913,7 @@ set_real_ip_from 91.208.75.178;
 set_real_ip_from 91.208.75.239;
 set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
+set_real_ip_from 91.210.59.57;
 set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.237.56;
 set_real_ip_from 91.219.239.166;
