Update lists at 20240415-1200

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,7 +6,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -155,14 +154,17 @@ allow 151.80.148.159;
 allow 152.89.233.169;
 allow 155.4.102.252;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
+allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
 allow 162.247.74.204;
 allow 162.247.74.206;
 allow 162.247.74.213;
 allow 162.247.74.216;
+allow 162.247.74.217;
 allow 162.247.74.27;
 allow 162.247.74.7;
 allow 162.247.74.74;
@@ -227,7 +229,9 @@ allow 179.43.159.78;
 allow 179.43.167.205;
 allow 179.43.182.232;
 allow 179.43.182.58;
+allow 179.48.251.188;
 allow 180.150.226.99;
+allow 18.205.138.236;
 allow 184.105.48.40;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -244,7 +248,6 @@ allow 185.100.87.41;
 allow 185.10.16.41;
 allow 185.106.94.195;
 allow 185.107.70.56;
-allow 185.112.146.168;
 allow 185.113.128.30;
 allow 185.126.117.21;
 allow 185.129.61.1;
@@ -274,7 +277,6 @@ allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
-allow 185.174.136.114;
 allow 185.177.151.34;
 allow 185.181.60.135;
 allow 185.181.61.115;
@@ -542,7 +544,6 @@ allow 185.81.115.120;
 allow 185.82.219.109;
 allow 185.84.31.254;
 allow 185.86.148.90;
-allow 188.138.71.60;
 allow 188.165.200.97;
 allow 188.166.92.179;
 allow 188.172.229.15;
@@ -820,7 +821,6 @@ allow 2001:41d0:a:fe22::1;
 allow 2001:41d0:e:70c::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
-allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::19;
 allow 2001:620:20d0::20;
@@ -1001,6 +1001,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.184.48.208;
 allow 23.236.122.62;
 allow 23.26.133.239;
@@ -1024,6 +1025,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::3;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
+allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::14;
 allow 2602:fc24:11:26c3::1;
@@ -1245,6 +1247,7 @@ allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
 allow 2a00:1169:119:b120::;
 allow 2a00:1169:11f:d680::;
+allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:3f::c0cc:80;
 allow 2a00:1728:f:f:f:f:c03c:9898;
@@ -1583,6 +1586,7 @@ allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:470::30;
+allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:d602:1:14bc::2;
 allow 2a0e:d602:2:2a2::2;
 allow 2a0e:d602:2:55f::2;
@@ -1619,7 +1623,6 @@ allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c814::2;
 allow 2a12:5940:c826::2;
-allow 2a12:5940:d0e2::2;
 allow 2a12:5940:f0a8::2;
 allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
@@ -1628,7 +1631,6 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
-allow 34.206.107.55;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 3.67.194.114;
@@ -1641,6 +1643,7 @@ allow 37.228.129.128;
 allow 37.228.129.5;
 allow 37.228.129.63;
 allow 37.252.254.33;
+allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
@@ -1682,8 +1685,6 @@ allow 45.151.167.11;
 allow 45.151.167.12;
 allow 45.151.167.13;
 allow 45.15.157.177;
-allow 45.15.158.165;
-allow 45.15.158.39;
 allow 45.61.137.5;
 allow 45.61.184.47;
 allow 45.61.185.172;
@@ -1824,6 +1825,7 @@ allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
+allow 80.78.21.251;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
@@ -1842,6 +1844,7 @@ allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
+allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.247.165.51;
 allow 84.38.134.224;
@@ -1873,6 +1876,7 @@ allow 89.147.110.154;
 allow 89.147.110.200;
 allow 89.147.110.202;
 allow 89.147.110.214;
+allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.147.111.87;
 allow 89.185.85.140;
@@ -1906,9 +1910,7 @@ allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.119.126.161;
 allow 92.205.129.119;
-allow 92.243.24.163;
 allow 92.246.84.133;
-allow 92.249.48.135;
 allow 93.123.12.112;
 allow 93.90.74.31;
 allow 93.95.225.141;
