--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -25,7 +25,6 @@ allow 2001:41d0:a:fe22::1;
 allow 2001:41d0:e:70c::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
-allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::19;
 allow 2001:620:20d0::20;
@@ -129,6 +128,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::3;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
+allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::14;
 allow 2602:fc24:11:26c3::1;
@@ -349,6 +349,7 @@ allow 2620:95:4007::111;
 allow 2800:ba0:6:c1::4858;
 allow 2a00:1169:119:b120::;
 allow 2a00:1169:11f:d680::;
+allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:3f::c0cc:80;
 allow 2a00:1728:f:f:f:f:c03c:9898;
@@ -687,6 +688,7 @@ allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:470::30;
+allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:d602:1:14bc::2;
 allow 2a0e:d602:2:2a2::2;
 allow 2a0e:d602:2:55f::2;
@@ -723,7 +725,6 @@ allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c814::2;
 allow 2a12:5940:c826::2;
-allow 2a12:5940:d0e2::2;
 allow 2a12:5940:f0a8::2;
 allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
