--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -154,7 +154,6 @@ allow 151.80.148.159;
 allow 152.89.233.169;
 allow 155.4.102.252;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -202,6 +201,7 @@ allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.58.89.182;
+allow 178.17.170.184;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
@@ -231,7 +231,6 @@ allow 179.43.182.232;
 allow 179.43.182.58;
 allow 179.48.251.188;
 allow 180.150.226.99;
-allow 18.205.138.236;
 allow 184.105.48.40;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -248,6 +247,7 @@ allow 185.100.87.41;
 allow 185.10.16.41;
 allow 185.106.94.195;
 allow 185.107.70.56;
+allow 185.112.146.168;
 allow 185.113.128.30;
 allow 185.126.117.21;
 allow 185.129.61.1;
@@ -667,7 +667,7 @@ allow 195.176.3.24;
 allow 195.80.151.30;
 allow 195.88.74.206;
 allow 198.144.178.163;
-allow 198.167.206.144;
+allow 198.167.206.166;
 allow 198.23.133.132;
 allow 198.251.84.163;
 allow 198.251.84.237;
@@ -812,7 +812,6 @@ allow 2001:41d0:601:1100::108e;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1100::205a;
 allow 2001:41d0:701:1100::38fc;
-allow 2001:41d0:701:1100::4434;
 allow 2001:41d0:701:1100::4f60;
 allow 2001:41d0:800:1f70::;
 allow 2001:41d0:801:2000::15bb;
@@ -821,6 +820,7 @@ allow 2001:41d0:a:fe22::1;
 allow 2001:41d0:e:70c::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
+allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::19;
 allow 2001:620:20d0::20;
@@ -1255,6 +1255,7 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
+allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
@@ -1272,6 +1273,7 @@ allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
+allow 2a02:6f8:2020:206:b::166;
 allow 2a02:7aa0:1619::ba45:e7f2;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
@@ -1631,6 +1633,7 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
+allow 34.237.215.9;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 3.67.194.114;
@@ -1706,10 +1709,14 @@ allow 45.9.150.130;
 allow 45.92.1.74;
 allow 45.94.31.180;
 allow 45.95.169.184;
+allow 45.95.169.223;
 allow 45.95.169.224;
 allow 45.95.169.225;
+allow 45.95.169.226;
 allow 45.95.169.227;
 allow 45.95.169.228;
+allow 45.95.169.229;
+allow 45.95.169.230;
 allow 45.95.169.255;
 allow 45.95.202.48;
 allow 46.166.139.111;
@@ -1727,7 +1734,6 @@ allow 51.15.59.15;
 allow 51.158.115.62;
 allow 51.178.45.216;
 allow 51.195.166.174;
-allow 51.195.91.124;
 allow 51.210.138.64;
 allow 51.222.142.67;
 allow 51.222.84.46;
@@ -1910,6 +1916,7 @@ allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.119.126.161;
 allow 92.205.129.119;
+allow 92.243.24.163;
 allow 92.246.84.133;
 allow 93.123.12.112;
 allow 93.90.74.31;
@@ -1919,6 +1926,7 @@ allow 93.95.228.205;
 allow 93.95.230.165;
 allow 93.95.230.54;
 allow 93.95.231.14;
+allow 93.95.231.88;
 allow 93.99.104.128;
 allow 93.99.104.18;
 allow 94.102.51.15;
