--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -154,7 +154,6 @@ set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.89.233.169;
 set_real_ip_from 155.4.102.252;
 set_real_ip_from 160.119.249.240;
-set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.247.72.192;
 set_real_ip_from 162.247.72.199;
 set_real_ip_from 162.247.74.200;
@@ -202,6 +201,7 @@ set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
+set_real_ip_from 178.17.170.184;
 set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
 set_real_ip_from 178.17.174.14;
@@ -231,7 +231,6 @@ set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 179.48.251.188;
 set_real_ip_from 180.150.226.99;
-set_real_ip_from 18.205.138.236;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.22;
@@ -248,6 +247,7 @@ set_real_ip_from 185.100.87.41;
 set_real_ip_from 185.10.16.41;
 set_real_ip_from 185.106.94.195;
 set_real_ip_from 185.107.70.56;
+set_real_ip_from 185.112.146.168;
 set_real_ip_from 185.113.128.30;
 set_real_ip_from 185.126.117.21;
 set_real_ip_from 185.129.61.1;
@@ -667,7 +667,7 @@ set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.80.151.30;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 198.144.178.163;
-set_real_ip_from 198.167.206.144;
+set_real_ip_from 198.167.206.166;
 set_real_ip_from 198.23.133.132;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
@@ -812,7 +812,6 @@ set_real_ip_from 2001:41d0:601:1100::108e;
 set_real_ip_from 2001:41d0:700:10a2::;
 set_real_ip_from 2001:41d0:701:1100::205a;
 set_real_ip_from 2001:41d0:701:1100::38fc;
-set_real_ip_from 2001:41d0:701:1100::4434;
 set_real_ip_from 2001:41d0:701:1100::4f60;
 set_real_ip_from 2001:41d0:800:1f70::;
 set_real_ip_from 2001:41d0:801:2000::15bb;
@@ -821,6 +820,7 @@ set_real_ip_from 2001:41d0:a:fe22::1;
 set_real_ip_from 2001:41d0:e:70c::1;
 set_real_ip_from 2001:470:1:908::9001;
 set_real_ip_from 2001:4b20:12:f001::105;
+set_real_ip_from 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 set_real_ip_from 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 set_real_ip_from 2001:620:20d0::19;
 set_real_ip_from 2001:620:20d0::20;
@@ -1255,6 +1255,7 @@ set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:138::94d2;
 set_real_ip_from 2a00:1dc0:caff:15::45dc;
+set_real_ip_from 2a00:1dc0:caff:178::982b;
 set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:99a0:0:1000::2;
@@ -1272,6 +1273,7 @@ set_real_ip_from 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
+set_real_ip_from 2a02:6f8:2020:206:b::166;
 set_real_ip_from 2a02:7aa0:1619::ba45:e7f2;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
@@ -1631,6 +1633,7 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 34.237.215.9;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 35.240.241.135;
 set_real_ip_from 3.67.194.114;
@@ -1706,10 +1709,14 @@ set_real_ip_from 45.9.150.130;
 set_real_ip_from 45.92.1.74;
 set_real_ip_from 45.94.31.180;
 set_real_ip_from 45.95.169.184;
+set_real_ip_from 45.95.169.223;
 set_real_ip_from 45.95.169.224;
 set_real_ip_from 45.95.169.225;
+set_real_ip_from 45.95.169.226;
 set_real_ip_from 45.95.169.227;
 set_real_ip_from 45.95.169.228;
+set_real_ip_from 45.95.169.229;
+set_real_ip_from 45.95.169.230;
 set_real_ip_from 45.95.169.255;
 set_real_ip_from 45.95.202.48;
 set_real_ip_from 46.166.139.111;
@@ -1727,7 +1734,6 @@ set_real_ip_from 51.15.59.15;
 set_real_ip_from 51.158.115.62;
 set_real_ip_from 51.178.45.216;
 set_real_ip_from 51.195.166.174;
-set_real_ip_from 51.195.91.124;
 set_real_ip_from 51.210.138.64;
 set_real_ip_from 51.222.142.67;
 set_real_ip_from 51.222.84.46;
@@ -1910,6 +1916,7 @@ set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.119.126.161;
 set_real_ip_from 92.205.129.119;
+set_real_ip_from 92.243.24.163;
 set_real_ip_from 92.246.84.133;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.90.74.31;
@@ -1919,6 +1926,7 @@ set_real_ip_from 93.95.228.205;
 set_real_ip_from 93.95.230.165;
 set_real_ip_from 93.95.230.54;
 set_real_ip_from 93.95.231.14;
+set_real_ip_from 93.95.231.88;
 set_real_ip_from 93.99.104.128;
 set_real_ip_from 93.99.104.18;
 set_real_ip_from 94.102.51.15;
